<resources>
    <string name="app_name">Lukas</string>
    <string name="button_slower">Slower</string>
    <string name="button_faster">Faster</string>
    <string name="button_brighter">Brighter</string>
    <string name="button_darker">Darker</string>
    <string name="button_stop">Faster</string>
    <string name="button_toggle">Toggle</string>
    <string name="button_light">Toggle Light</string>
    <string name="label_name">Name</string>
    <string name="label_battery">Battery</string>
    <string name="label_connected">Status</string>
    <string name="label_scan">Scan &amp; Connect</string>
    <string name="label_scan_stop">Stop Scanning</string>
    <string name="label_train">Train</string>
    <string name="label_remote">Remote</string>
    <string name="label_switch">Switch</string>
    <string name="menu_header">Options</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_switchoff">Switch Off</string>
    <string name="menu_servo">Servo Settings</string>
    <string name="menu_speed_limit">Limit Speed</string>
    <string name="permission_warning_title">Functionality limited</string>
    <string name="permission_warning_text">Please give the bluetooth permission to connect to the hub.</string>
    <string name="label_none">No Train</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_devices">Devices</string>
    <string name="title_remotes">Remotes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_train">Add Train</string>
    <string name="add_remote">Add Remote</string>
    <string name="add_switch">Add Switch</string>
    <string name="send">Senden</string>
    <string name="cancel">Cancel</string>
    <string name="make_input">Make Input</string>
    <string name="ok">OK</string>
    <string name="setup_servo">Setup Servo</string>
    <string name="rename">Rename</string>
    <string name="duplo">Duplo</string>
</resources>