<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingStart="4pt"
    android:paddingEnd="0pt"
    android:paddingBottom="4pt">

    <androidx.cardview.widget.CardView
        android:id="@+id/Card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/RemoteBackground"
        app:cardElevation="1pt"
        app:contentPadding="10pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_max="450dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/RemoteBackground">

            <TableRow android:layout_marginBottom="2pt">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_marginEnd="1pt"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_outline_settings_remote_24"
                        app:tint="#878787" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_remote"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/NameContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_name"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow android:layout_marginBottom="2pt">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/label_battery" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/BatteryContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_battery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=" %" />

                </LinearLayout>

            </TableRow>

            <TableRow android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/label_connected" />

                <TextView
                    android:id="@+id/ConnectedContent"
                    android:layout_width="2dp"
                    android:layout_weight="2"
                    android:text="@string/label_connected" />

            </TableRow>

            <TableRow android:layout_marginTop="8pt">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Spinner
                        android:id="@+id/TrainASpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginEnd="2pt"
                        android:background="#ecd8e9"/>

                    <Spinner
                        android:id="@+id/TrainBSpinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="2pt"
                        android:background="#d8b1d4" />
                </LinearLayout>

            </TableRow>
        </TableLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    Plum     MediumPurple  Violet
    Violet   #ecd8e9  #d8b1d4  #c38bbf  #ad66a9  #973e95  #800080
    Grau     #e6e9ec  #ced3d9  #b6bdc6  #9ea9b4  #8794a2  #708090
    -->