<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4pt"
    android:clipToPadding="false">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/Card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="1pt"
        app:contentPadding="7pt"
        app:contentPaddingBottom="5pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_max="450dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow android:layout_marginBottom="0pt">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_marginEnd="1pt"
                        android:visibility="gone"
                        app:srcCompat="@drawable/ic_baseline_switch_right_24"
                        app:tint="#878787" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_switch"
                        android:textColor="@color/primaryTextColor"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/NameContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/label_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="20sp" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="2pt"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/label_battery" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <TextView
                        android:id="@+id/BatteryContent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_battery" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                </LinearLayout>

            </TableRow>

            <TableRow android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/label_connected" />

                <TextView
                    android:id="@+id/ConnectedContent"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:text="@string/label_connected" />

            </TableRow>

            <TableRow android:layout_marginTop="4pt">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ToggleButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="2pt"
                    android:backgroundTint="@color/DarkSeaGreen"
                    android:text="1"
                    android:textColor="#FFFFFF"
                    app:icon="@drawable/ic_baseline_switch_right_24"
                    app:iconGravity="textStart"
                    app:iconTint="#FFFFFF" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/ToggleButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2pt"
                    android:layout_weight="1"
                    android:backgroundTint="@color/SeaGreen"
                    android:text="2"
                    android:textColor="#FFFFFF"
                    app:icon="@drawable/ic_baseline_switch_right_24"
                    app:iconGravity="textStart"
                    app:iconTint="#FFFFFF" />
                <!-- #4CAF50  -->
            </TableRow>
        </TableLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>